mdmCeneveo/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Publication_Title__c</fullName>
        <label>Publication Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quote Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy in 3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy in &gt; 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Me</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Lead_ID__c</fullName>
        <formula>Id &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1) &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1) &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_List__c</fullName>
        <label>Segment List</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweepstakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Final Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Customers May 2013 Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo Contest 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Pack Prospects - 2.7.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLMISSU3 - 3.10.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food+Beverage May 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design- July 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutraceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFM Test List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo Contest Participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Photo Contest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skype_Address__c</fullName>
        <label>Skype Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sleeves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleeves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Web Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <picklist>
            <picklistValues>
                <fullName>Select One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1S SBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2S SBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCKB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recycled Other (describe below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic (describe below)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Advertising/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoholic Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel/Textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottled Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business to Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car/Transportation Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalogs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Packers/Decorators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Store/Big Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic/Medical Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelopes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text_Print__c</fullName>
        <label>Text Print</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim_Size__c</fullName>
        <label>Trim Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Undelivered_Time__c</fullName>
        <label>Undelivered Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the Marketing, Inside sales, or Lead Generator who initiated the lead</description>
        <label>Lead Initiated By</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <label>LL Web Source</label>
        <picklist>
            <picklistValues>
                <fullName>Quote Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Page</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeadsMirandaMonth</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads - Miranda Monthly</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsMirandaWeekly</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads - Miranda Weekly</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Lead_Source__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>Envelop_Cold_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Envelop Cold Lead</label>
        <queue>Envelop_Cold_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Envelop_Email_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Envelop Email Lead</label>
        <queue>Envelop_Email_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Envelop_Hot_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Envelop Hot Lead</label>
        <queue>Envelop_Hot_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Envelop_Warm_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Envelop Warm Lead</label>
        <queue>Envelop_Warm_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lables_Cold_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lables Cold Lead</label>
        <queue>Lables_Cold_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lables_Email_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lables Email Lead</label>
        <queue>Lables_Email_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lables_Hot_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lables Hot Lead</label>
        <queue>Lables_Hot_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lables_Warm_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lables Warm Lead</label>
        <queue>Lables_Warm_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MHC_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>4/7/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>petty,evans,kinyon,fearson,cochran</value>
        </filters>
        <label>MHC Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Untouched_Leads_from_Cenveo_Store</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Lead_Source__c</field>
            <operation>equals</operation>
            <value>Web - CenveoLabel,Web - CenveoPack,Web - CenveoPrint,Web - GilbrethUSA</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Untouched</value>
        </filters>
        <label>My Untouched Leads from Cenveo Store</label>
    </listViews>
    <recordTypes>
        <fullName>CenveoPack</fullName>
        <active>true</active>
        <businessProcess>Cenveo Lead Process</businessProcess>
        <description>Use for leads coming through directly from Cenveo Store - Packaging Leads</description>
        <label>CenveoPack</label>
    </recordTypes>
    <recordTypes>
        <fullName>CenveoPrint</fullName>
        <active>true</active>
        <businessProcess>Cenveo Lead Process</businessProcess>
        <description>Use for leads coming through directly from Cenveo Store - Print Leads</description>
        <label>CenveoPrint</label>
    </recordTypes>
    <recordTypes>
        <fullName>GilbrethUSA</fullName>
        <active>true</active>
        <businessProcess>Cenveo Lead Process</businessProcess>
        <description>Use for leads coming through directly from Gilbreth USA</description>
        <label>GilbrethUSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <businessProcess>Cenveo Lead Process</businessProcess>
        <label>Master</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Rejection_Reason</fullName>
        <active>true</active>
        <description>If the Lead Status is set up Disqualified, Rejection Reason is required.</description>
        <errorConditionFormula>AND(
        ISPICKVAL( Status , &quot;Disqualified&quot; ),
        ISBLANK( TEXT(Rejection_Reason__c) )
       )</errorConditionFormula>
        <errorDisplayField>Rejection_Reason__c</errorDisplayField>
        <errorMessage>Leads set to Disquailified need to have a Rejection Reason. Select the appropriate value.</errorMessage>
    </validationRules>
</CustomObject>